changes to azure.yaml file

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,5 +10,5 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
+- script: dotnet build SwinTake/BackEnd/Swintake/Swintake/SwinTake.csproj --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
